added pt-br / english toggle button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       <header class="app__header">
         <div class="header-row">
           <h1>Task Manager</h1>
-          <button id="theme-toggle" type="button" class="btn-secondary">Dark Mode</button>
+          <div class="header-controls">
+            <button id="lang-toggle" type="button" class="btn-secondary">PT-BR</button>
+            <button id="theme-toggle" type="button" class="btn-secondary">Dark Mode</button>
+          </div>
         </div>
         <p>Manage your tasks with a simple card-based CRUD flow.</p>
       </header>
